@@ -428,8 +428,8 @@ static const ASM_MAPPING _asxxxx_mapping[] =
   {"immedword", "#0x%04X"},
   {"immedbyte", "#0x%02X"},
   {"hashedstr", "#%s"},
-  {"lsbimmeds", "#<%s"},
-  {"msbimmeds", "#>%s"},
+  {"lsbimmeds", "#<(%s)"},
+  {"msbimmeds", "#>(%s)"},
   {"module", ".module %s"},
   {"global", ".globl %s"},
   {"fileprelude", ""},
